--- a/toolkits/global/packages/global-customer-satisfaction-input/demo/main.scss
+++ b/toolkits/global/packages/global-customer-satisfaction-input/demo/main.scss
@@ -4,7 +4,7 @@
 @import '../node_modules/@springernature/brand-context/springer/scss/enhanced.scss';
 
 // Component SCSS
-@import '../scss/00-tokens/default.tokens.scss';
+@import 'scss/10-settings/default.scss';
 @import './scss/demo-page-layout';
 @import '../scss/50-components/customer-satisfaction-input';
 
